--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "express": "^4.21.1",
     "express-router": "^0.0.1",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.8.2"
+    "mongoose": "^8.8.2",
+    "perfect-payload": "^1.0.8"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
   }
+    
 }
